[package]
name = "neopass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clipboard = "0.5.0"
tabled = "0.15.0"
dialoguer = { git = "https://github.com/thomassimmer/dialoguer.git", branch ="add-footer-and-header" }
console = "0.15.0"
cocoon = "0.4.1"
lazy_static = "1.4.0"
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }